package br.com.chiken_pix_back.chikenpix.enumerations;

public enum StatusConta {
    ATIVA,
    DESATIVADA
}
