package br.com.chiken_pix_back.chikenpix.enumerations;

public enum StatusTransacao {
    PENDENTE,
    CONCLUIDA,
    CANCELADA,
    FALHADA
}
