package br.com.chiken_pix_back.chikenpix.enumerations;

public enum TipoChavePix {
    CPF,
    CNPJ,
    EMAIL,
    TELEFONE,
    ALEATORIA
}
