package br.com.chiken_pix_back.chikenpix.enumerations;

public enum TipoTransacao {
    PIX_ENVIADO,
    PIX_RECEBIDO;
}
